# ooai-promptdb

./: .gitignore  .pdm-python  .readthedocs.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 20260331_0001_init_promptdb.py  20260331_0002_add_prompt_assets.py
docs/source/: api.rst  architecture.rst  cli.md  client-guide.md  conf.py  examples.md  http-api.md  index.rst  prompt-files.md  publishing.md  quickstart.md  testing.md  workflows.md
examples/: basic_usage.py  langgraph_usage.py
infra/: compose.yaml
infra/docker/: api.Dockerfile
infra/otel/: collector.yaml
prompts/: research_answerer.md  support_classifier.txt  support_classifier.yaml
src/promptdb/: __init__.py  __main__.py  api.py  cli.py  client.py  console.py  db.py  domain.py  files.py  observability.py  service.py  settings.py  storage.py
src/promptdb/dashboard_streamlit/: app.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_service.py
tests/unit/: test_cli.py  test_domain.py  test_files_and_client.py
